src/snapshots/transmute__parser__tests__err_variable_name_must_start_with_lower_case.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "X",
        ],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Literal(
                    Literal {
                        kind: Number(
                            42,
                        ),
                        span: 1:9; [8, 10],
                    },
                ),
                span: 1:9; [8, 10],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Let(
                    Identifier {
                        id: IdentId {
                            id: 0,
                        },
                        span: 1:5; [4, 5],
                    },
                    ExprId {
                        id: 0,
                    },
                ),
                span: 1:1; [0, 11],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Variable or function name 'X' must start with a lower case letter or an underscore",
                span: 1:5; [4, 5],
                level: Warning,
                generated_at: (
                    "src/parser.rs",
                    191,
                ),
            },
        ],
    },
)
