src/snapshots/transmute__parser__tests__err_while_missing_open_curly_bracket.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Literal(
                    Literal {
                        kind: Boolean(
                            true,
                        ),
                        span: 1:7; [6, 10],
                    },
                ),
                span: 1:7; [6, 10],
            },
            Expression {
                id: ExprId {
                    id: 1,
                },
                kind: Block(
                    [],
                ),
                span: 1:12; [11, 12],
            },
            Expression {
                id: ExprId {
                    id: 2,
                },
                kind: While(
                    ExprId {
                        id: 0,
                    },
                    ExprId {
                        id: 1,
                    },
                ),
                span: 1:1; [0, 12],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Expression(
                    ExprId {
                        id: 2,
                    },
                ),
                span: 1:1; [0, 12],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `}`, expected one of `.`, `{`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`",
                span: 1:12; [11, 12],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1028,
                ),
            },
        ],
    },
)
