src/snapshots/transmute__parser__tests__expression_literal_boolean.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [],
        identifier_refs: [],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Literal(
                    Literal {
                        kind: Boolean(
                            true,
                        ),
                        span: 1:1; [0, 4],
                    },
                ),
                span: 1:1; [0, 4],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Expression(
                    ExprId {
                        id: 0,
                    },
                ),
                span: 1:1; [0, 4],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of `.`, `;`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`",
                span: 1:5; [4, 4],
                level: Error,
                generated_at: (
                    "src/parser.rs",
                    1130,
                ),
            },
        ],
    },
)
