src/snapshots/transmute__parser__tests__field_access-dot.snap
---
source: src/parser.rs
expression: "Dot::new(&ast, &vec![]).serialize()"
---
//graphviz file
digraph ast {
ordering="out";
splines=false;
n0[label="parent"][shape="plaintext"][fontcolor="blue"]
n1[label="child"][shape="plaintext"][fontcolor="blue"]
n2[label="."][shape="plaintext"][fontcolor="black"]
n2 -> n0[style="solid"][color="black"][arrowhead="none"]
n2 -> n1[style="solid"][color="black"][arrowhead="none"]}
