src/snapshots/transmute__parser__tests__field_access_in_condition-dot.snap
---
source: src/parser.rs
expression: "Dot::new(&ast, &vec![]).serialize()"
---
//graphviz file
digraph ast {
ordering="out";
splines=false;
n0[label="a"][shape="plaintext"][fontcolor="blue"]
n1[label="b"][shape="plaintext"][fontcolor="blue"]
n2[label="."][shape="plaintext"][fontcolor="black"]
n3[label="1"][shape="plaintext"][fontcolor="black"]
n4[label="if"][shape="plaintext"][fontcolor="black"]
n2 -> n0[style="solid"][color="black"][arrowhead="none"]
n2 -> n1[style="solid"][color="black"][arrowhead="none"]
n4 -> n2[style="solid"][color="black"][arrowhead="none"]
n4 -> n3[style="solid"][color="green"][arrowhead="none"]}
