src/snapshots/transmute__parser__tests__field_and_method_call.snap
---
source: src/parser.rs
expression: "(&ast, &diagnostics)"
---
(
    Ast {
        identifiers: [
            "parent",
            "child",
            "f",
        ],
        identifier_refs: [
            IdentifierRef {
                id: IdentRefId {
                    id: 0,
                },
                ident: Identifier {
                    id: IdentId {
                        id: 0,
                    },
                    span: 1:1; [0, 6],
                },
                symbol_id: None,
            },
            IdentifierRef {
                id: IdentRefId {
                    id: 1,
                },
                ident: Identifier {
                    id: IdentId {
                        id: 1,
                    },
                    span: 1:8; [7, 12],
                },
                symbol_id: None,
            },
            IdentifierRef {
                id: IdentRefId {
                    id: 2,
                },
                ident: Identifier {
                    id: IdentId {
                        id: 2,
                    },
                    span: 1:14; [13, 14],
                },
                symbol_id: None,
            },
        ],
        expressions: [
            Expression {
                id: ExprId {
                    id: 0,
                },
                kind: Literal(
                    Literal {
                        kind: Identifier(
                            IdentRefId {
                                id: 0,
                            },
                        ),
                        span: 1:1; [0, 6],
                    },
                ),
                span: 1:1; [0, 6],
            },
            Expression {
                id: ExprId {
                    id: 1,
                },
                kind: Literal(
                    Literal {
                        kind: Identifier(
                            IdentRefId {
                                id: 1,
                            },
                        ),
                        span: 1:8; [7, 12],
                    },
                ),
                span: 1:8; [7, 12],
            },
            Expression {
                id: ExprId {
                    id: 2,
                },
                kind: Binary(
                    ExprId {
                        id: 0,
                    },
                    BinaryOperator {
                        kind: Access,
                        span: 1:7; [6, 7],
                    },
                    ExprId {
                        id: 1,
                    },
                ),
                span: 1:1; [0, 12],
            },
            Expression {
                id: ExprId {
                    id: 3,
                },
                kind: FunctionCall(
                    IdentRefId {
                        id: 2,
                    },
                    [],
                ),
                span: 1:14; [13, 16],
            },
            Expression {
                id: ExprId {
                    id: 4,
                },
                kind: Binary(
                    ExprId {
                        id: 2,
                    },
                    BinaryOperator {
                        kind: Access,
                        span: 1:13; [12, 13],
                    },
                    ExprId {
                        id: 3,
                    },
                ),
                span: 1:1; [0, 16],
            },
        ],
        statements: [
            Statement {
                id: StmtId {
                    id: 0,
                },
                kind: Expression(
                    ExprId {
                        id: 4,
                    },
                ),
                span: 1:1; [0, 17],
            },
        ],
        root: [
            StmtId {
                id: 0,
            },
        ],
    },
    Diagnostics {
        diagnostics: [],
    },
)
